# mtool

./: pyproject.toml  requirements.txt
src/: constants.py  gencsv.py  main.py  parser_utils.py  server.py  utils.py
src/data/: employee.csv
src/subcommands/: __init__.py  search.py  stats.py  web.py
