[tool.poetry]
name = "mtool"
version = "0.1.0"
description = "Multi-tool handy command aggregator"
authors = ["Maniak Root <maniakroot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.3"
Faker = "^18.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
